--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
+- degree: Mil gaye bas  
+  uni: DAVIET
   year: June, 2014 &mdash; January, 2015
   # awards:
   # summary:
